# rs-auto-sync

./: Cargo.toml  README.md
src/: main.rs
